Show bonus and billable hours

--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -12,7 +12,7 @@
 		busyIndicatorDelay="{objectView>/delay}">
 
 		<semantic:titleHeading>
-			<Title text="{surname}" />
+			<Title text="{name}" />
 		</semantic:titleHeading>
 
 		<semantic:headerContent>
