--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -1,43 +1,28 @@
-<mvc:View
-	controllerName="iot.timetracking-worklist.controller.Worklist"
-	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc"
+<mvc:View controllerName="iot.timetracking-worklist.controller.Worklist" 
+	xmlns="sap.m" 
+	xmlns:mvc="sap.ui.core.mvc" 
 	xmlns:semantic="sap.f.semantic">
 
-	<semantic:SemanticPage
-		id="page"
-		headerPinnable="false"
-		toggleHeaderOnTitleClick="false">
+	<semantic:SemanticPage id="page" headerPinnable="false" toggleHeaderOnTitleClick="false">
 
 		<semantic:titleHeading>
 			<Title text="{i18n>worklistTitle}" />
 		</semantic:titleHeading>
-		
+
 		<semantic:content>
-			<Table
-				id="table"
-				width="auto"
-				items="{
+			<Table id="table" width="auto" items="{
 					path: '/Employees',
 					sorter: {
-						path: 'surname',
+						path: 'name',
 						descending: false
 					}
-				}"
-				noDataText="{worklistView>/tableNoDataText}"
-				growing="true"
-				growingScrollToLoad="true"
-				updateFinished=".onUpdateFinished">
+				}" noDataText="{worklistView>/tableNoDataText}" growing="true" growingScrollToLoad="true" updateFinished=".onUpdateFinished">
 
 				<headerToolbar>
 					<Toolbar>
 						<Title id="tableHeader" text="{worklistView>/worklistTableTitle}"/>
 						<ToolbarSpacer />
-						<SearchField
-							id="searchField"
-							tooltip="{i18n>worklistSearchTooltip}"
-							search=".onSearch"
-							width="auto">
+						<SearchField id="searchField" tooltip="{i18n>worklistSearchTooltip}" search=".onSearch" width="auto">
 						</SearchField>
 						<Button icon="sap-icon://add" press="onPressAdd"/>
 					</Toolbar>
@@ -47,15 +32,25 @@
 					<Column id="nameColumn">
 						<Text text="{i18n>tableNameColumnTitle}" id="nameColumnTitle"/>
 					</Column>
+					<Column>
+						<Text text="Fakturastunden"/>
+					</Column>
+					<Column>
+						<Text text="Bonus"/>
+					</Column>
 				</columns>
 
 				<items>
-					<ColumnListItem
-						type="Navigation"
-						press=".onPress">
+					<ColumnListItem type="Navigation" press=".onPress">
 						<cells>
-							<ObjectIdentifier
-								title="{surname}"/>
+							<ObjectIdentifier title="{name}"/>
+							<ObjectNumber number="{billableDuration}"/>
+							<ObjectNumber number="{path: 'bonus', 
+								type: 'sap.ui.model.type.Float',
+								formatOptions: {
+										maxFractionDigits: 2,
+										minFractionDigits: 2
+								}}"/>
 						</cells>
 					</ColumnListItem>
 				</items>
