Add a create-page

--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -30,10 +30,10 @@
 
 				<columns>
 					<Column id="nameColumn">
-						<Text text="{i18n>tableNameColumnTitle}" id="nameColumnTitle"/>
+						<Text text="Name" id="nameColumnTitle"/>
 					</Column>
 					<Column>
-						<Text text="Fakturastunden"/>
+						<Text text="Fakt.-stunden"/>
 					</Column>
 					<Column>
 						<Text text="Bonus"/>
