--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -1,15 +1,9 @@
-<mvc:View
-	controllerName="iot.timetracking-worklist.controller.Object"
-	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc"
+<mvc:View controllerName="iot.timetracking-worklist.controller.Object" 
+	xmlns="sap.m" 
+	xmlns:mvc="sap.ui.core.mvc" 
 	xmlns:semantic="sap.f.semantic">
 
-	<semantic:SemanticPage
-		id="page"
-		headerPinnable="false"
-		toggleHeaderOnTitleClick="false"
-		busy="{objectView>/busy}"
-		busyIndicatorDelay="{objectView>/delay}">
+	<semantic:SemanticPage id="page" headerPinnable="false" toggleHeaderOnTitleClick="false" busy="{objectView>/busy}" busyIndicatorDelay="{objectView>/delay}">
 
 		<semantic:titleHeading>
 			<Title text="{name}" />
