--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -1,24 +1,50 @@
 <mvc:View controllerName="iot.timetracking-worklist.controller.Object" 
 	xmlns="sap.m" 
-	xmlns:mvc="sap.ui.core.mvc" 
-	xmlns:semantic="sap.f.semantic">
+	xmlns:mvc="sap.ui.core.mvc">
 
-	<semantic:SemanticPage id="page" headerPinnable="false" toggleHeaderOnTitleClick="false" busy="{objectView>/busy}" busyIndicatorDelay="{objectView>/delay}">
+	<Page title="{name}" id="page" busy="{objectView>/busy}" busyIndicatorDelay="{objectView>/delay}">
 
-		<semantic:titleHeading>
-			<Title text="{name}" />
-		</semantic:titleHeading>
+		<content>
+			<Table id="recordsTable" items="{
+					path: 'records',
+					sorter: {	
+						path: 'title'
+					}
+				}" mode="MultiSelect" noDataText="{worklistView>/tableNoDataText}" growing="true" growingScrollToLoad="true">
 
-		<semantic:headerContent>
-			<ObjectNumber
-			/>
-		</semantic:headerContent>
+				<headerToolbar>
+					<Toolbar>
+						<ToolbarSpacer />
+						<Button icon="sap-icon://add" press="onPressAddRecord"/>
+						<Button icon="sap-icon://delete" press="onPressDeleteRecord"/>
+					</Toolbar>
+				</headerToolbar>
 
-		<semantic:sendEmailAction>
-			<semantic:SendEmailAction id="shareEmail" press=".onShareEmailPress"/>
-		</semantic:sendEmailAction>
+				<columns>
+					<Column>
+						<Text text="Title"/>
+					</Column>
+					<Column>
+						<Text text="Description"/>
+					</Column>
+					<Column>
+						<Text text="Duration"/>
+					</Column>
+				</columns>
+
+				<items>
+					<ColumnListItem type="Navigation" press=".onPress">
+						<cells>
+							<ObjectIdentifier title="{title}"/>
+							<Text text="{description}"/>
+							<ObjectNumber number="{duration}"/>
+						</cells>
+					</ColumnListItem>
+				</items>
+			</Table>
+		</content>
 
 
-	</semantic:SemanticPage>
+	</Page>
 
 </mvc:View>
