--- a/webapp/view/CreateRecord.view.xml
+++ b/webapp/view/CreateRecord.view.xml
@@ -11,8 +11,8 @@
       <Label labelFor="descInput" text="Description"/>
       <Input id="descInput" value="{viewModel>/newRecord/description}"/>
       <Label labelFor="projectInput" text="Project"/>
-      <Select id="projectSelect" value="{viewModel>/newRecord/project}" items="{/Projects}">
-        <core:Item text="{viewModel>Title}" key="{viewModel>ID}"/>
+      <Select id="projectSelect" forceSelection="false" selectedKey="{viewModel>/newRecord/project_ID}" items="{/Projects}">
+        <core:Item text="{title}" key="{ID}"/>
       </Select>
       <Label labelFor="durationInput" text="Duration"/>
       <Input id="durationInput" value="{viewModel>/newRecord/duration}" type="Number"/>
