--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -37,7 +37,7 @@
 						<cells>
 							<ObjectIdentifier title="{title}"/>
 							<Text text="{description}"/>
-							<ObjectNumber number="{duration}"/>
+							<ObjectNumber number="{time}"/>
 						</cells>
 					</ColumnListItem>
 				</items>
