--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -45,7 +45,7 @@
 							<ObjectIdentifier title="{name}"/>
 							<ObjectNumber number="{recordsCount}"/>
 							<ObjectNumber number="{
-								path: 'billableDuration', 
+								path: 'billingTime', 
 								type: 'sap.ui.model.type.Float',
 								formatOptions: {
 										maxFractionDigits: 2,
