--- a/webapp/view/CreateEntity.view.xml
+++ b/webapp/view/CreateEntity.view.xml
@@ -1,12 +1,17 @@
 <mvc:View controllerName="iot.timetracking-worklist.controller.CreateEntity" 
   xmlns="sap.m" 
   xmlns:form="sap.ui.layout.form" 
+  xmlns:core="sap.ui.core" 
   xmlns:mvc="sap.ui.core.mvc">
   <Page showHeader="false" floatingFooter="true">
     <form:SimpleForm  editable="true">
       <!-- <Label labelFor="nameInput" text="{/##Employees/name@com.sap.vocabularies.Common.v1.Label}"/> -->
       <Label labelFor="nameInput" text="Name"/>
       <Input id="labelInput" value="{viewModel>/newEntity/name}"/>
+      <Label labelFor="projectsSelect" text="Projects"/>
+      <MultiComboBox id="projectsSelect" items="{/Projects}">
+        <core:Item text="{title}" key="{ID}"/>
+      </MultiComboBox>
     </form:SimpleForm>
     <footer>
       <Toolbar>
