--- a/webapp/view/CreateEmployee.view.xml
+++ b/webapp/view/CreateEmployee.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="iot.timetracking-worklist.controller.CreateProject" 
+<mvc:View controllerName="iot.timetracking-worklist.controller.CreateEmployee" 
   xmlns="sap.m" 
   xmlns:form="sap.ui.layout.form" 
   xmlns:core="sap.ui.core" 
