--- a/webapp/view/CreateEmployee.view.xml
+++ b/webapp/view/CreateEmployee.view.xml
@@ -4,20 +4,27 @@
   xmlns:core="sap.ui.core" 
   xmlns:mvc="sap.ui.core.mvc">
   <Page showHeader="false" floatingFooter="true">
-    <form:SimpleForm  editable="true">
+    <form:SimpleForm editable="true">
       <!-- <Label labelFor="nameInput" text="{/##Employees/name@com.sap.vocabularies.Common.v1.Label}"/> -->
       <Label labelFor="nameInput" text="Name"/>
-      <Input id="labelInput" value="{viewModel>/newEntity/name}"/>
-      <Label labelFor="projectsSelect" text="Projects"/>
-      <MultiComboBox id="projectsSelect" items="{/Projects}">
-        <core:Item text="{title}" key="{ID}"/>
-      </MultiComboBox>
+      <Input id="labelInput" value="{name}"/>
+      <Label labelFor="projectsList" text="Projects"/>
+      <List id="projectsList" mode="MultiSelect" growing="true" growingScrollToLoad="true" items="{projects}">
+        <headerToolbar>
+          <Toolbar>
+            <ToolbarSpacer />
+            <Button icon="sap-icon://add" press="onPressAddProject"/>
+            <Button icon="sap-icon://delete" press="onPressDeleteProject"/>
+          </Toolbar>
+        </headerToolbar>
+        <items>
+          <StandardListItem press=".onPress" title="{project/title}"/>
+        </items>
+      </List>
     </form:SimpleForm>
     <footer>
       <Toolbar>
-        <ToolbarSpacer/>
-        <Button text="Speichern" press="onPressSave" type="Emphasized"/>
-        <Button text="Abbrechen" press="onPressCancel"/>
+        <Button text="Zurück" press="onPressCancel"/>
       </Toolbar>
     </footer>
   </Page>
