--- a/webapp/view/CreateRecord.view.xml
+++ b/webapp/view/CreateRecord.view.xml
@@ -12,7 +12,7 @@
       <Input id="descInput" value="{viewModel>/newRecord/description}"/>
       <Label labelFor="projectInput" text="Project"/>
       <Select id="projectSelect" forceSelection="false" selectedKey="{viewModel>/newRecord/project_ID}" items="{projects}">
-        <core:Item text="{title}" key="{projectID}"/>
+        <core:Item text="{project/title}" key="{project/ID}"/>
       </Select>
       <Label labelFor="durationInput" text="Duration"/>
       <Input id="durationInput" value="{viewModel>/newRecord/time}" type="Number"/>
