--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -28,7 +28,7 @@
 					</Column>
 				</columns>
 				<items>
-					<ColumnListItem type="Navigation" press=".onPress">
+					<ColumnListItem type="Navigation" press=".onPressEditRecord">
 						<cells>
 							<ObjectIdentifier title="{title}"/>
 							<Text text="{description}"/>
