--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -1,7 +1,7 @@
 <mvc:View controllerName="iot.timetracking-worklist.controller.Object" 
 	xmlns="sap.m" 
 	xmlns:mvc="sap.ui.core.mvc">
-	<Page title="{name}" id="page" busyIndicatorDelay="{objectView>/delay}">
+	<Page title="{name}" id="page" busyIndicatorDelay="{viewModel>/delay}">
 		<content>
 			<Table id="recordsTable" fixedLayout="false" items="{
 					path: 'records',
