--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -6,57 +6,52 @@
 	<Page id="page" title="Zeiterfassung">
 		<content>
 			<Table id="table" width="auto" fixedLayout="false" items="{
-					path: '/Employees',
-					sorter: {
-						path: 'name',
-						descending: false
-					}
-				}" mode="MultiSelect" noDataText="{worklistView>/tableNoDataText}" growing="true" growingScrollToLoad="true" updateFinished=".onUpdateFinished">
+					path: '/RecordsView',
+					sorter: [{
+						path: 'date',
+						group: true,
+						descending: true
+					}]
+				}" mode="MultiSelect" growing="true" growingScrollToLoad="true" updateFinished=".onUpdateFinished">
 
 				<headerToolbar>
 					<Toolbar>
-						<Title id="tableHeader" text="{worklistView>/worklistTableTitle}" width="100%"/>
+						<Title id="tableHeader" text="Arbeitszeit" width="100%"/>
 						<ToolbarSpacer />
 						<SearchField id="searchField" tooltip="{i18n>worklistSearchTooltip}" search=".onSearch"/>
-						<Button icon="sap-icon://add" press="onPressAdd"/>
-						<Button icon="sap-icon://delete" press="onPressDelete"/>
+						<Button text="Abrechnen" press="onPressCreateInvoice"/>
 					</Toolbar>
 				</headerToolbar>
 
 				<columns>
-					<Column id="nameColumn">
-						<Text text="Mitarbeiter" wrapping="false" id="nameColumnTitle"/>
+					<Column>
+						<Text text="Tätigkeit"/>
+					</Column>
+					<Column demandPopin="true" minScreenWidth="tablet">
+						<Text text="Projekt"/>
+					</Column>
+					<Column demandPopin="true" minScreenWidth="desktop">
+						<Text text="Kunde"/>
+					</Column>
+					<Column demandPopin="true" minScreenWidth="desktop">
+						<Text text="Datum"/>
 					</Column>
 					<Column hAlign="End">
-						<Text text="Anzahl Einträge"/>
+						<Text text="Dauer"/>
 					</Column>
-					<Column hAlign="End">
-						<Text text="Faktura" wrapping="false"/>
-					</Column>
-					<Column hAlign="End">
-						<Text text="Bonus" wrapping="false"/>
+					<Column>
+						<Text text="Status"/>
 					</Column>
 				</columns>
-
 				<items>
-					<ColumnListItem type="Navigation" press=".onPress">
+					<ColumnListItem type="Navigation" press=".onPressEditRecord">
 						<cells>
-							<ObjectIdentifier title="{name}"/>
-							<ObjectNumber number="{recordsCount}"/>
-							<ObjectNumber number="{
-								path: 'billingTime', 
-								type: 'sap.ui.model.type.Float',
-								formatOptions: {
-										maxFractionDigits: 2,
-										roundingMode: 'away_from_zero'
-								}}" />
-							<ObjectNumber number="{
-								path: 'bonus', 
-								type: 'sap.ui.model.type.Float',
-								formatOptions: {
-										maxFractionDigits: 2,
-										roundingMode: 'away_from_zero'
-								}}" />
+							<ObjectIdentifier title="{title}" text="{description}"/>
+							<Text text="{project/title}"/>
+							<Text text="{project/customer/name}"/>
+							<Text text="{date}"/>
+							<ObjectNumber number="{time}"/>
+							<ObjectStatus text="{path: 'status', formatter: '.formatter.dynamicText'}" icon="{path: 'status', formatter: '.formatter.statusIcon'}" state="{path: 'status', formatter: '.formatter.statusColour'}"/>
 						</cells>
 					</ColumnListItem>
 				</items>
